Add meta tag for unique identifier in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="e630a1384923e7d221c8f9da047a7dc6a55d5a72" content="e630a1384923e7d221c8f9da047a7dc6a55d5a72" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>StudyHub 9 & 10 | Maths & Science</title>
