--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="e630a1384923e7d221c8f9da047a7dc6a55d5a72" content="e630a1384923e7d221c8f9da047a7dc6a55d5a72" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>StudyHub 9 & 10 | Maths & Science</title>
@@ -232,6 +231,18 @@
     }
 
   </style>
+  <script>
+(function(cwyyg){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = cwyyg || {};
+s.src = "\/\/quixoticwar.com\/bCX.VFsndqGilI0\/YHWrcA\/veQmV9hufZdUVlVkLPkTvYP3VNQTCM\/2\/MZjjcQtuNTjOcm1oMWz_Ypy_OfAB";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 </head>
 <body>
 
