Update script settings and source URL in index.html

--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
 
   </style>
   <script>
-(function(cwyyg){
+(function(ekvt){
 var d = document,
     s = d.createElement('script'),
     l = d.scripts[d.scripts.length - 1];
-s.settings = cwyyg || {};
-s.src = "\/\/quixoticwar.com\/bCX.VFsndqGilI0\/YHWrcA\/veQmV9hufZdUVlVkLPkTvYP3VNQTCM\/2\/MZjjcQtuNTjOcm1oMWz_Ypy_OfAB";
+s.settings = ekvt || {};
+s.src = "\/\/quixoticwar.com\/blXOVxs.deGylO0WYnWTcj\/WemmB9wuSZvUHljk_POTdYL3SNAT_MM2mNiDIcFtmNEj\/cv1gMizJYR0LO\/AC";
 s.async = true;
 s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
