--- a/class9th.html
+++ b/class9th.html
@@ -14,6 +14,18 @@ s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
 })({})
 </script>
+   <script>
+(function(xxuvy){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = xxuvy || {};
+s.src = "\/\/quixoticwar.com\/bWX.V\/swd\/GslD0tYrW\/cw\/kepmo9NuZZhULlFkAP-TNY-3\/NxTkMP2sNrTUY\/tINvjmcu1XM\/zQYO1ANJwi";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Class 9 | Maths & Science</title>
@@ -130,6 +142,7 @@ animate();
 
 </body>
 </html>
+
 
 
 
