--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="">
+  <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/16%20px.png?raw=true" sizes="16x16">
+   <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/16%20px.png?raw=true" sizes="32x32">
+   <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/16%20px.png?raw=true" sizes="180x180">
 
   <script>
 (function(ekvt){
