--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ l.parentNode.insertBefore(s, l);
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Board Buddy. | Maths & Science</title>
+  <title>Board Buddy | Maths & Science Class 9th & 10th</title>
   <link rel="stylesheet" href="style.css">
   <style>
     *{
