--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/favicon-16.png?raw=true" sizes="16x16">
-   <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/36%20px.png?raw=true" sizes="32x32">
+   <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/favicon-36.png?raw=true" sizes="32x32">
    <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/favicon-180.png?raw=true" sizes="180x180">
 
   <script>
