--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/favicon-16.png?raw=true" sizes="16x16">
-   <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/favicon-36.png?raw=true" sizes="32x32">
-   <link rel="icon" type="image/png" href="https://github.com/Ukking999/Board-Buddy/blob/main/favicon-180.png?raw=true" sizes="180x180">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="shortcut icon" href="favicon.ico">
+<link rel="manifest" href="site.webmanifest">
+<link rel="android-chrome" sizes="192x192" href="android-chrome-192x192.png">
+<link rel="android-chrome" sizes="512x512" href="android-chrome-512x512.png">
   <script>
 (function(ekvt){
 var d = document,
