--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ l.parentNode.insertBefore(s, l);
 </section>
 
 <footer>
-  © 2026 Board Buddy (Utkarsh, Manas , Jalgon, Maharashtra)
+  © 2026 Board Buddy (Utkarsh Badgujar , Manas Gavit , Jalgon, Maharashtra)
 All Rights Reserved. 
 This content is protected under Indian Copyright Law.
 For personal educational use only. No reproduction or distribution without permission.
