--- a/9heron's.html
+++ b/9heron's.html
@@ -17,17 +17,7 @@ l.parentNode.insertBefore(s, l);
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Class 9 Maths - Heron's Formula MCQ</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-<style>
-body {background:#0b0f1a; color:#fff; font-family:'Poppins',sans-serif; padding:20px;}
-h1 {text-align:center; margin-bottom:20px;}
-.quiz-container {max-width:800px; margin:0 auto; background:#11162a; padding:30px; border-radius:16px;}
-.question {margin-bottom:15px; font-weight:600;}
-.options label {display:block; margin:5px 0; padding:8px 12px; background:#222; border-radius:8px; cursor:pointer; transition:0.3s;}
-.options label:hover {background:#4da3ff; color:#000;}
-button {margin-top:20px; padding:10px 20px; border:none; border-radius:8px; background:#4da3ff; color:#000; font-weight:600; cursor:pointer; transition:0.3s;}
-button:hover {opacity:0.85;}
-.result {margin-top:20px; font-size:18px; text-align:center; font-weight:600;}
-</style>
+<link rel="stylesheet" type="text/css" href="MCQsTheme.css">
 </head>
 <body>
 
@@ -458,4 +448,5 @@ document.getElementById('submit-btn').addEventListener('click', ()=>{
 </body>
 
 </html>
+
 
